--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ html {
   color: white;
   margin: 20px 0;
   font-size: 1.5rem; 
-  font-weight: 600;
+  font-weight: bold;
   letter-spacing: 2px;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -173,7 +173,7 @@ html {
 .game-question {
   max-width: 70%;
   color: white;
-  margin: 40px 0;
+  margin: 10px 0;
   font-size: 2.5rem;
   font-weight: bold;
   text-align: center;
