--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,10 @@ html {
   transform: translateY(-3px);
 }
 
+.btn-continue-answers {
+  margin-left: 20px;
+}
+
  .game-container {
   display: flex;
   flex-direction: column;
@@ -140,7 +144,7 @@ html {
   color: white;
   font-weight: bold;
   background-color: #204e73;
-  padding: 10px 20px;
+  padding: 10px 20px; 
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
@@ -154,7 +158,7 @@ html {
   padding: 10px 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   animation: elevate 0.5s ease-out;
 }
 
@@ -183,6 +187,7 @@ html {
 .game-answers{
   display: flex;
   flex-direction: column;
+  align-items: stretch;
   justify-content: center;
   padding: 10px;
   width: 100%;
@@ -192,10 +197,11 @@ html {
   width: 100%;
   margin-bottom: 10px;
   list-style: none;
+  padding: 0;
 }
 
 .game-answers-button{
-  max-width: 100%;
+  /* max-width: 100%; */
   background-color: #204e73;
   color: white;
   font-weight: bold;
